--- a/CSE_151A_Week_4_Discussion_Notebook.ipynb
+++ b/CSE_151A_Week_4_Discussion_Notebook.ipynb
@@ -12,17 +12,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
-          "ename": "",
-          "evalue": "",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'numpy'",
           "output_type": "error",
           "traceback": [
-            "\u001b[1;31mRunning cells with 'Python 3.13.7' requires the ipykernel package.\n",
-            "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
-            "\u001b[1;31mOr install 'ipykernel' using the command: '/opt/homebrew/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
           ]
         }
       ],
@@ -872,9 +873,9 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.10",
       "language": "python",
-      "name": "python3"
+      "name": "py310"
     },
     "language_info": {
       "codemirror_mode": {
@@ -886,7 +887,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.13.7"
+      "version": "3.9.6"
     }
   },
   "nbformat": 4,
